# webp-animation

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  test.yml
examples/: decode_animation.rs  encode_animation.rs  encode_loop_twice.rs  print_error_messages.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decoder.rs  encoder.rs
src/: decoder.rs  encoder.rs  encoder_config.rs  frame.rs  lib.rs  main.rs  webp_data.rs
