[package]
name = "webp-animation"
version = "0.1.0"
authors = ["Mika Vatanen <blaind@blaind.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/blaind/webp-animation"
description = """
A high-level Rust wrapper for decoding and encoding WebP animations 
"""
keywords = ["webp", "webp-animation", "decoder", "encoder"]
categories = ["multimedia::images", "multimedia", "api-bindings"]
edition = "2018"

[dependencies]
image = { version = "0.23.14", optional = true }

[dependencies.libwebp-sys2]
git = "https://github.com/blaind/libwebp-sys2-rs"
features = ["0_5", "demux", "mux"]
rev = "d0daaff"

[dev-dependencies]
image = { version = "0.23.14" }
imageproc = { version = "0.22.0" }
