[package]
name = "webp-animation"
version = "0.4.1"
authors = ["Mika Vatanen <blaind@blaind.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/blaind/webp-animation"
description = """
A high-level Rust wrapper for decoding and encoding WebP animations 
"""
keywords = ["webp", "webp-animation", "decoder", "encoder"]
categories = ["multimedia::images", "multimedia", "api-bindings"]
edition = "2018"

[dependencies]
image = { version = "0.23.14", default_features = false, optional = true }
log = "0.4.14"

[dependencies.libwebp-sys2]
version = "0.1.2"
features = ["0_5", "0_6", "1_2", "demux", "mux"]

[dev-dependencies]
image = { version = "0.23.14", default_features = false, features = ["png"] }
imageproc = { version = "0.22.0" }
env_logger = "0.8.3"

[features]
static = ["libwebp-sys2/static"]
