[package]
name = "fuzz"
version = "0.1.0"
authors = ["Mika Vatanen <blaind@blaind.net>"]
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.3.0"
webp_animation = { path = ".." }

[[bin]]
name = "encoder"
path = "fuzz_targets/encoder.rs"
test = false
doc = false
